fixed overflow in review description

--- a/frontend/src/components/Profile/Profile.css
+++ b/frontend/src/components/Profile/Profile.css
@@ -46,7 +46,7 @@
     width: 90%;
 
     border-radius: 10px;
-
+    overflow-wrap: break-word;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
 }
 .individual-review-title {
