--- a/frontend/src/components/SpotDetail/ReviewContainer.css
+++ b/frontend/src/components/SpotDetail/ReviewContainer.css
@@ -28,6 +28,7 @@
     padding: 0 15px 15px 15px;
     border-radius: 15px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
+    overflow-wrap: break-word;
 }
 
 #review-form-container > p {font-size:18px;}
